Commit color changes

--- a/scripts/script.css
+++ b/scripts/script.css
@@ -13,7 +13,7 @@ ul.ulnav{
 } 
 li.linav{
     float: left;
-    background-color: #0e5a27;
+    background-color: salmon;
 }
 li.linav a{
     display: block;
