--- a/scripts/script.css
+++ b/scripts/script.css
@@ -13,7 +13,7 @@ ul.ulnav{
 } 
 li.linav{
     float: left;
-    background-color: salmon;
+    background-color: rgb(235, 105, 91);
 }
 li.linav a{
     display: block;
@@ -40,7 +40,7 @@ div.text-box{
     margin-left: auto;
     margin-right: auto;
     width: 700px;
-    height: 200px;
+    height: 230px;
     border-radius: 10px;
     border: 3px;
     background-color: rgba(97, 89, 89, 0.3);
