--- a/scripts/script.css
+++ b/scripts/script.css
@@ -45,5 +45,19 @@ div.text-box{
     border: 3px;
     background-color: rgba(97, 89, 89, 0.3);
 }
-
+* {
+    box-sizing: border-box;
+}
+  
+  .column {
+    float: left;
+    padding: 5px;
+  }
+  
+  /* Clearfix (clear floats) */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
  
