--- a/scripts/script.css
+++ b/scripts/script.css
@@ -35,6 +35,7 @@ li.linav a:hover{
 .title{
     font-size: 23pt;
     font-family: Verdana;
+    text-align: center;
 }
 div.text-box{
     margin-left: auto;
@@ -45,5 +46,6 @@ div.text-box{
     border: 3px;
     background-color: rgba(97, 89, 89, 0.3);
 }
+
 
  
