--- a/scripts/script.css
+++ b/scripts/script.css
@@ -104,8 +104,21 @@ h1 {
 }  
 .content {
     background-color: white;
-    padding: 10px;
-    
+    padding: 10px;  
 }  
-
+div.text-box{
+    margin-left: auto;
+    margin-right: auto;
+    width: 900px;
+    height: 400px;
+    border-radius: 10px;
+    border: 0px;
+    background-color: rgba(150, 146, 146, 0.8);
+    font-size: 23pt;
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
