--- a/scripts/script.css
+++ b/scripts/script.css
@@ -121,4 +121,16 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+  { box-sizing: border-box;
+}  
+.column1{
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
