--- a/scripts/script.css
+++ b/scripts/script.css
@@ -137,16 +137,17 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
-  { box-sizing: border-box;
-}  
 .column1{
     float: left;
-    width: 33.33%;
+    width: 100%;
     padding: 5px;
 }
 .row::after {
     content: "";
     clear: both;
     display: table;
-  }
+}
+h3{
+    text-align: center;
+}
 
