--- a/scripts/script.css
+++ b/scripts/script.css
@@ -149,4 +149,13 @@ img {
 h3{
     text-align: center;
 }
-
+.column2{    
+    float: center;
+    width: 100%;
+    padding: 5px;
+ }
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
