--- a/scripts/script.css
+++ b/scripts/script.css
@@ -47,7 +47,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(235, 105, 91);
-    border-radius: 8px;
+    border-radius: 10px;
 }
 #header-tr{
     vertical-align: center;
@@ -60,7 +60,7 @@ body{
 }
 #header-td:hover{
     text-align: center;
-    width: 150px;
+    width: 160px;
     background-color: rgb(102, 78, 76);
     padding: 10px;
 }
@@ -92,8 +92,8 @@ div.text-box{
     max-width: 1000px;
     margin: auto;
 } 
-h1 {
-    font-size: 60px;
+h1{
+    font-size: 23px;
     word-break: break-all;
 }  
 .row {
@@ -123,12 +123,12 @@ h1 {
 div.text-box{
     margin-left: auto;
     margin-right: auto;
-    width: 900px;
-    height: 430px;
+    width: 990px;
+    height: 290px;
     border-radius: 10px;
     border: 0px;
     background-color: rgba(150, 146, 146, 0.8);
-    font-size: 21pt;
+    font-size: 18pt;
 }
 img {
     display: block;
@@ -158,4 +158,9 @@ h3{
     content: "";
     clear: both;
     display: table;
+}
+#ML{
+    float: left;
+    width: 500;
+    height: 400;
 }
