--- a/scripts/script.css
+++ b/scripts/script.css
@@ -164,3 +164,11 @@ h3{
     width: 500;
     height: 400;
 }
+#intro-table{
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+#header-intro{
+    vertical-align: center;
+}
