--- a/scripts/script.css
+++ b/scripts/script.css
@@ -60,7 +60,7 @@ div.text-box{
 } 
 .nav{
     border:1px solid rgb(0, 0, 0);
-    border-width:1px 0;
+    border-width:1px 1px;
     list-style:none;
     margin:0;
     padding:0;
@@ -77,13 +77,16 @@ div.text-box{
   padding: 14px 16px;
   text-decoration: none;
 }
-ul{
+.nav ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: darkorange;
 }
+li a:hover {
+    background-color: rgb(194, 101, 15);
+  }
 .main {
     max-width: 1000px;
     margin: auto;
